fix(extended-2.1+basic-3.1,3.2,3.3,3.4): apply BEM with overlapping paragraphs 3.1,3.2,3.3,3.4

--- a/style.css
+++ b/style.css
@@ -1,65 +1,70 @@
 /* Basic Style */
 
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.header__img {
   width: 100%;
 }
 
-.aaa,
-.more_inf {
+.header,
+.header__info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa { text-align: center;
+
+  .header { 
+    text-align: center;
   }
 
 }
 
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
 
-.task {
+.input_new-task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
 
-.task-row-wrapper {
+.section-main-form_input {
   display: flex;
 }
 
-ul {
+.list_none {
   margin: 0;
   padding: 0px;
 }
 
-li, 
-h3 {
+.list-items, 
+.section-main {
   list-style: none;
 }
 
-input,
-button {
+.input_new-task,
+.btn,
+.btn__add,
+.list-items__input {
   outline: none;
 }
 
-button {
+.btn,
+.btn__add {
   background: none;
   border: 0px;
   color: #888;
@@ -69,13 +74,14 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.btn:hover,
+.btn__add:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
 
-h3 {
+.section-main {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -84,8 +90,9 @@ h3 {
   margin: 0;
   text-transform: uppercase;
 }
-
-input[type="text"] {
+/**/
+.list-items__input_tasks,
+.input_new-task_info {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -98,24 +105,25 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.list-items__input_tasks:focus,
+.input_new-task_info:focus {
   color: #333;
 }
 
 /* New Task */
 
-h3 {
+.section-main_add {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.input_new-task {
   width: 318px;
 }
 
 /* Task list */
 
-li {
+.list-items {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -124,53 +132,49 @@ li {
   align-items: center;
 }
 
-li > * {
-  vertical-align: middle;
-}
-
-li > input[type="checkbox"] {
+.list-items__input_checkbox {
   margin: 0 10px;
 }
 
-li > label {
+.list-items__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
+  display: inline-block;
+  flex-grow: 1;
 }
 
-li > input[type="text"] {
+.list-items__input_tasks {
   width: 226px;
+  flex-grow: 1;
 }
 
-button.delete img {
+.btn__remove {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.btn__remove:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
 
-ul#completed-tasks label {
+.list_completed_tasks .list-items__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 
-ul li input[type="text"] {
+.list-items .list-items__input_tasks,
+.editMode .list-items__label {
   display: none;
 }
 
-ul li.editMode input[type="text"] {
+.editMode .list-items__input_tasks {
   display: inline-block;
   width: 224px;
-}
-
-ul li.editMode label {
-  display: none;
 }
